--- a/resource/pages/styles/browser.css
+++ b/resource/pages/styles/browser.css
@@ -1,76 +1,2 @@
-
-/**
- * Default browser styles.
- * @author Richard "ihack2712" Sandberg <ihack@theteamcoders.com>
- */
-
- a
- {
-	 display: inline;
-	 color: blue;
-	 text-decoration: underline;
- }
- 
- img
- {
-	 display: inline-block;
-	 width: auto;
-	 height: auto;
-	 background-color: inherit;
-	 background-image: auto;
- }
- 
- img::alt
- {
-	 display: inline-block;
-	 width: auto;
-	 height: auto;
-	 color: inherit;
-	 background-color: inherit;
-	 text-decoration: inherit;
-	 font-style: inherit;
-	 font-weight: inherit;
- }
- 
- b, strong
- {
-	 display: inline-block;
-	 width: auto;
-	 height: auto;
-	 color: inherit;
-	 background-color: inherit;
-	 text-decoration: inherit;
-	 font-style: inherit;
-	 font-weight: bold;
- }
- 
- i, em
- {
-	 display: inline-block;
-	 width: auto;
-	 height: auto;
-	 color: inherit;
-	 background-color: inherit;
-	 text-decoration: inherit;
-	 font-style: italic;
-	 font-weight: inherit;
- }
- 
- u
- {
-	 display: inline-block;
-	 width: auto;
-	 height: auto;
-	 color: inherit;
-	 background-color: inherit;
-	 text-decoration: underline;
-	 font-style: italic;
-	 font-weight: inherit;
- }
- 
- script
- {
-	 display: none;
- }
- 
+/*This page is not the same as resource/browser/browser.css*/
  
